--- a/landing/src/components/VideoSection.astro
+++ b/landing/src/components/VideoSection.astro
@@ -9,7 +9,7 @@ import ContentWrapper from "../components/ContentWrapper.tsx";
   <ContentWrapper
     className="font-aeonik text-primary flex w-full flex-col items-center justify-center gap-6 sm:gap-10 md:gap-12 lg:gap-20"
   >
-    <h1 class="text-primary-foreground z-10 text-center text-xl font-bold">
+    <h1 class="text-primary-foreground z-10 text-center text-2xl font-bold">
       See it in action
     </h1>
 
@@ -30,7 +30,7 @@ import ContentWrapper from "../components/ContentWrapper.tsx";
     class="absolute -right-15 -bottom-20 z-1 sm:-right-15 sm:-bottom-25 lg:-right-45 lg:-bottom-30"
   >
     <img
-      src="live-debugger/assets/Vector.svg"
+      src="/live-debugger/assets/Vector.svg"
       alt=""
       class="h-60 w-auto sm:h-80 md:h-100 lg:h-120"
     />
