--- a/landing/src/components/CTA.astro
+++ b/landing/src/components/CTA.astro
@@ -14,9 +14,9 @@ const url = Astro.props.url;
   </IconBox>
   <h2 class="text-md font-medium">{title}</h2>
   <Button variant="outline" size="sm">
-    <a href={url} class="flex flex-row items-center justify-center gap-2">
-      <p class="text-medium text-sm">{buttonText}</p>
-      <ArrowRight strokeWidth={2} />
+    <a href={url} class="flex flex-row items-center justify-center">
+      <p class="text-medium px-2 text-sm">{buttonText}</p>
+      <ArrowRight strokeWidth={1} className="h-5 w-5 md:h-6 md:w-6" />
     </a>
   </Button>
 </div>
