--- a/landing/src/styles/global.css
+++ b/landing/src/styles/global.css
@@ -4,9 +4,8 @@
 @import "./theme.css";
 @import "./animations.css";
 
-/* @source "./src*.{astro,html,js,jsx,md,mdx,svelte,ts,tsx,vue}"; */
-
 html {
   scroll-behavior: smooth;
   background-color: var(--color-swm-brand-100);
+  letter-spacing: 0.0025em;
 }
