feat: update landing page

--- a/landing/src/components/VideoSection.astro
+++ b/landing/src/components/VideoSection.astro
@@ -9,7 +9,7 @@ import ContentWrapper from "../components/ContentWrapper.tsx";
   <ContentWrapper
     className="font-aeonik text-primary flex w-full flex-col items-center justify-center gap-6 sm:gap-10 md:gap-12 lg:gap-20"
   >
-    <h1 class="text-primary-foreground z-10 text-center text-xl font-bold">
+    <h1 class="text-primary-foreground z-10 text-center text-2xl font-bold">
       See it in action
     </h1>
 
