--- a/landing/src/components/HeroSection.astro
+++ b/landing/src/components/HeroSection.astro
@@ -15,7 +15,7 @@ import { Button } from "@/components/ui/button";
     >
       <div class="flex flex-col items-center justify-center gap-5 md:gap-6">
         <div
-          class="flex flex-row items-center justify-center gap-3 text-sm font-thin sm:gap-4 md:gap-5 lg:gap-6"
+          class="flex flex-row items-center justify-center gap-3 text-sm font-normal sm:gap-4 md:gap-5 lg:gap-6"
         >
           <p>Created by</p>
           <img
@@ -30,19 +30,18 @@ import { Button } from "@/components/ui/button";
           >
             LiveView&nbsp;debugging made&nbsp;simple
           </h1>
-          <h2 class="text-md text-secondary-strong text-center font-thin">
-            Make your Phoenix LiveView debugging journey simpler with
-            LiveDebugger.
+          <h2 class="text-md text-secondary-strong text-center">
+            See what’s happening inside your apps with&nbsp;LiveDebugger
           </h2>
         </div>
       </div>
-      <div class="mt-5 flex gap-4 max-sm:w-full max-sm:flex-col">
+      <div class="mt-5 flex gap-4 px-2 max-sm:w-full max-sm:flex-col">
         <Button variant="secondary"
-          ><p class="text-medium text-sm">Get started</p></Button
-        >
+          ><p class="text-medium text-sm tracking-normal">Get started</p>
+        </Button>
         <Button variant="defaultWithOutline"
-          ><p class="text-medium text-sm">See it in action</p></Button
-        >
+          ><p class="text-medium px-2 text-sm">See it in action</p>
+        </Button>
       </div>
     </div>
 
