--- a/landing/src/components/FeaturesSection.astro
+++ b/landing/src/components/FeaturesSection.astro
@@ -41,10 +41,10 @@ const mainFeatures = [
 
 <section
   id="features"
-  class="flex min-h-screen w-screen scroll-m-10 flex-col items-center justify-center bg-white py-16 md:py-20 lg:py-28"
+  class="flex w-full scroll-m-10 flex-col items-center justify-center bg-white py-16 md:py-20 lg:py-28"
 >
   <ContentWrapper
-    className="font-aeonik text-primary flex w-full flex-col items-center justify-center gap-10 max-sm:px-8 sm:gap-14 md:gap-16 lg:gap-20"
+    className="font-aeonik text-primary flex flex-col items-center justify-center gap-10 sm:gap-14 md:gap-16 lg:gap-20"
   >
     <h1 class="text-center text-2xl font-bold">Main features</h1>
 
