--- a/landing/src/components/RoadmapSection.astro
+++ b/landing/src/components/RoadmapSection.astro
@@ -53,12 +53,12 @@ const accordionData = [
 
 <section
   id="roadmap"
-  class="flex w-full scroll-m-10 flex-col items-center justify-center bg-white py-16 sm:py-20 md:py-32"
+  class="flex w-full flex-col items-center justify-center bg-white py-16 sm:py-20 md:py-32"
 >
   <ContentWrapper
     className="font-aeonik text-primary flex flex-col items-center justify-center gap-12 sm:gap-14 md:gap-16 lg:gap-18"
   >
-    <h1 class="text-primary text-center text-2xl font-bold">Roadmap</h1>
+    <h2 class="text-primary text-center text-2xl font-bold">Roadmap</h2>
 
     <Accordion data={accordionData} client:idle />
 
