feat: update landing page

--- a/landing/src/styles/aeonik.css
+++ b/landing/src/styles/aeonik.css
@@ -32,6 +32,14 @@
 
 @font-face {
   font-family: "Aeonik";
+  src: url("/fonts/Aeonik-Thin.otf") format("opentype");
+  font-weight: 250;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Aeonik";
   src: url("/fonts/Aeonik-Light.otf") format("opentype");
   font-weight: 300;
   font-style: normal;
