--- a/landing/src/components/WhatsNewSection.astro
+++ b/landing/src/components/WhatsNewSection.astro
@@ -6,7 +6,7 @@ import { SquareCheckBig } from "lucide-react";
 
 const newsBlocks = [
   {
-    title: "Better successor LiveView discovery",
+    title: "Better LiveView successor discovery",
     description:
       "Improved tracking of LiveView processes when they’re replaced due to actions like page reloads or errors, ensuring smoother debugging transitions.",
     icon: SquareCheckBig,
@@ -28,7 +28,7 @@ const newsBlocks = [
 
 <section
   id="whatsnew"
-  class="bg-bg-additional flex w-full scroll-m-10 items-center justify-center py-15 sm:py-20 md:py-28 lg:py-32"
+  class="bg-bg-additional flex w-full items-center justify-center py-15 sm:py-20 md:py-28 lg:py-32"
 >
   <ContentWrapper
     className="font-aeonik text-primary flex w-full flex-col items-center justify-center gap-12 sm:gap-14 md:gap-16 lg:gap-18"
@@ -37,10 +37,10 @@ const newsBlocks = [
       <Badge variant="ternary"
         ><p class="text-2xs font-medium">LiveDebugger v0.4.0</p></Badge
       >
-      <h1 class="text-primary text-center text-2xl font-bold">What’s new</h1>
-      <p class="font-regular text-xs">
+      <h2 class="text-primary text-center text-2xl font-bold">What’s new</h2>
+      <h3 class="font-regular text-xs">
         Highlights from the August 2025 update.
-      </p>
+      </h3>
     </div>
 
     <div class="aspect-video h-full w-full">
@@ -55,9 +55,7 @@ const newsBlocks = [
       </iframe>
     </div>
 
-    <div
-      class="flex w-full items-start justify-between gap-x-8 gap-y-6 max-md:flex-col"
-    >
+    <div class="flex w-full justify-between gap-x-8 gap-y-6 max-md:flex-col">
       {
         newsBlocks.map((block) => {
           const Icon = block.icon;
