--- a/landing/src/components/WhatsNewSection.astro
+++ b/landing/src/components/WhatsNewSection.astro
@@ -55,9 +55,7 @@ const newsBlocks = [
       </iframe>
     </div>
 
-    <div
-      class="flex w-full items-start justify-between gap-x-8 gap-y-6 max-md:flex-col"
-    >
+    <div class="flex w-full justify-between gap-x-8 gap-y-6 max-md:flex-col">
       {
         newsBlocks.map((block) => {
           const Icon = block.icon;
