--- a/landing/src/styles/theme.css
+++ b/landing/src/styles/theme.css
@@ -2,7 +2,6 @@
   --breakpoint-sm: 600px;
   --breakpoint-md: 1025px;
   --breakpoint-lg: 1550px;
-  /* --breakpoint-lg: 1441px; */
   --breakpoint-xl: initial;
   --breakpoint-2xl: initial;
 
@@ -149,5 +148,9 @@
         --text-3xl--line-height: 74px;
       }
     }
+  }
+  code {
+    font-family: inherit;
+    font-weight: inherit;
   }
 }
