--- a/landing/src/components/HeroSection.astro
+++ b/landing/src/components/HeroSection.astro
@@ -29,9 +29,9 @@ import { Button } from "@/components/ui/button";
 
         <div class="flex flex-col items-center justify-center gap-4 md:gap-5">
           <h1
-            class="max-w-[500px] text-center text-4xl font-bold md:text-5xl lg:text-6xl"
+            class="max-w-[600px] text-center text-4xl font-bold text-balance md:text-5xl lg:text-6xl"
           >
-            LiveView&nbsp;debugging made&nbsp;simple
+            LiveView debugging made simple
           </h1>
           <h2 class="text-md text-secondary-strong text-center">
             See what’s happening inside your apps with&nbsp;LiveDebugger
