Add icon and colors

--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -81,4 +81,6 @@
 
   --diff-pulse-bg: var(--swm-sea-blue-60);
   --diff-pulse-text: var(--slate-900);
+  --diff-negative-bg: var(--red-300);
+  --diff-positive-bg: var(--swm-green-60);
 }
