--- a/assets/app/styles/themes/dark.css
+++ b/assets/app/styles/themes/dark.css
@@ -44,6 +44,12 @@
     --button-secondary-content: var(--gray-200);
     --button-secondary-content-hover: var(--gray-200);
 
+    /* Other Button */
+    --button-green-content: var(--swm-green-100);
+    --button-green-content-hover: var(--swm-green-60);
+    --button-red-content: var(--swm-pink-80);
+    --button-red-content-hover: var(--swm-pink-60);
+
     /* Tooltip */
     --tooltip-text: var(--gray-900);
     --tooltip-bg: var(--swm-sea-blue-60);
