--- a/landing/src/components/FeaturesSection.astro
+++ b/landing/src/components/FeaturesSection.astro
@@ -73,7 +73,7 @@ const mainFeatures = [
         href="https://hexdocs.pm/live_debugger/features.html"
         class="flex flex-row items-center justify-center gap-1 px-2"
       >
-        <p class="text-normal text-sm">Explore all</p>
+        <p class="text-normal text-md">Explore all</p>
         <ArrowRight strokeWidth={1} className="h-5 w-5 md:h-6 md:w-6" />
       </a></Button
     >
