--- a/landing/src/components/HeroSection.astro
+++ b/landing/src/components/HeroSection.astro
@@ -29,11 +29,11 @@ import { Button } from "@/components/ui/button";
 
         <div class="flex flex-col items-center justify-center gap-4 md:gap-5">
           <h1
-            class="max-w-[600px] text-center text-4xl font-bold text-balance md:text-5xl lg:text-6xl"
+            class="max-w-[600px] text-center text-3xl font-bold text-balance md:text-5xl lg:text-6xl"
           >
             LiveView debugging made simple
           </h1>
-          <h2 class="text-md text-secondary-strong text-center">
+          <h2 class="text-secondary-strong text-center text-lg">
             See what’s happening inside your apps with&nbsp;LiveDebugger
           </h2>
         </div>
@@ -41,12 +41,12 @@ import { Button } from "@/components/ui/button";
       <div class="mt-5 flex gap-4 px-2 max-sm:w-full max-sm:flex-col">
         <a href="#gettingstarted">
           <Button variant="secondary"
-            ><p class="text-medium text-sm">Get started</p>
+            ><p class="text-medium text-md">Get started</p>
           </Button>
         </a>
         <a href="#videosection">
           <Button variant="defaultWithOutline"
-            ><p class="text-medium px-2 text-sm">See it in action</p>
+            ><p class="text-medium text-md px-2">See it in action</p>
           </Button>
         </a>
       </div>
