--- a/landing/src/components/RoadmapSection.astro
+++ b/landing/src/components/RoadmapSection.astro
@@ -67,7 +67,7 @@ const accordionData = [
       title="Have a feature idea? Let us know!"
       buttonText="Submit a Github issue"
       url="https://github.com/software-mansion/live-debugger/issues/new/choose"
-      buttonText2="Fill out feedback survey"
+      buttonText2="Fill out LiveDebugger survey"
       url2="https://docs.google.com/forms/d/e/1FAIpQLSftsztVznsYRt6G-rv6Wk-ZppS4SkgM-5r6o38YxZYieatPLQ/viewform?usp=sharing&ouid=114462502893566863638"
     >
       <Lightbulb
