--- a/landing/src/components/WhatsNewSection.astro
+++ b/landing/src/components/WhatsNewSection.astro
@@ -35,10 +35,10 @@ const newsBlocks = [
   >
     <div class="flex flex-col items-center justify-center gap-4">
       <Badge variant="ternary"
-        ><p class="text-2xs font-medium">LiveDebugger v0.4.0</p></Badge
+        ><p class="text-sm font-medium">LiveDebugger v0.4.0</p></Badge
       >
       <h2 class="text-primary text-center text-2xl font-bold">What’s new</h2>
-      <h3 class="font-regular text-xs">
+      <h3 class="font-regular text-lg">
         Highlights from the August 2025 update.
       </h3>
     </div>
