--- a/landing/src/layouts/Layout.astro
+++ b/landing/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import "../styles/aeonik.css";
+import { Font } from "astro:assets";
 import { Header } from "@/components/ui/Header";
 import { Footer } from "@/components/ui/Footer";
 
@@ -20,8 +20,9 @@ const { title } = Astro.props;
       name="description"
       content="A must-have tool for Elixir developers. See your LiveComponents tree, inspect assigns, trace and filter callback executions, and more."
     />
+    <Font cssVariable="--font-aeonik" preload />
   </head>
-  <body>
+  <body class="font-primary">
     <Header client:load />
     <slot />
     <Footer client:load />
