--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -89,4 +89,7 @@
   --diff-pulse-text: var(--slate-900);
   --diff-negative-bg: var(--red-300);
   --diff-positive-bg: var(--swm-green-60);
+
+  --monitored-pid-bg: var(--swm-green-40);
+  --monitored-pid-text: var(--slate-900);
 }
