--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -91,5 +91,6 @@
   --diff-positive-bg: var(--swm-green-60);
 
   --monitored-pid-bg: var(--swm-green-40);
-  --monitored-pid-text: var(--slate-900);
+  --disconnected-bg: var(--swm-pink-40);
+  --disconnected-text: var(--slate-900);
 }
