Enhancement: added status dot for indicating that assigns are loading (#864)
* Separate scrolls for pinned assigns and all assigns

* Long pinned assigns have fixed space size on the left

* Made assigns sizes stick to right upper corner even when scrolling

* Adjusted section title size for assigns

* Extended async loading for assigns

* Fix assigns sizes async result stage initialization

* Added colors for status dot

* Status dot component

* Added status dot

* Red dot in case of DeadView mode or error

* Removed warning

--- a/assets/app/styles/themes/dark.css
+++ b/assets/app/styles/themes/dark.css
@@ -92,5 +92,9 @@
     --diff-pulse-text: var(--gray-900);
     --diff-negative-bg: var(--red-900);
     --diff-positive-bg: rgb(from var(--swm-green-100) r g b / 0.3);
+
+    --status-dot-success-bg: var(--swm-green-100);
+    --status-dot-warning-bg: var(--swm-yellow-100);
+    --status-dot-error-bg: var(--swm-pink-100);
   }
 }
