--- a/assets/app/styles/themes/dark.css
+++ b/assets/app/styles/themes/dark.css
@@ -93,8 +93,14 @@
     --diff-negative-bg: var(--red-900);
     --diff-positive-bg: rgb(from var(--swm-green-100) r g b / 0.3);
 
+    --monitored-pid-bg: var(--swm-green-60);
+    --disconnected-bg: var(--swm-pink-60);
+    --disconnected-text: var(--slate-900);
+
     --status-dot-success-bg: var(--swm-green-100);
     --status-dot-warning-bg: var(--swm-yellow-100);
     --status-dot-error-bg: var(--swm-pink-100);
+    
+    --navbar-selected-bg: var(--swm-sea-blue-60);
   }
 }
