--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -92,7 +92,13 @@
   --diff-negative-bg: var(--red-300);
   --diff-positive-bg: var(--swm-green-60);
 
+  --monitored-pid-bg: var(--swm-green-40);
+  --disconnected-bg: var(--swm-pink-40);
+  --disconnected-text: var(--slate-900);
+
   --status-dot-success-bg: var(--swm-green-100);
   --status-dot-warning-bg: var(--swm-yellow-100);
   --status-dot-error-bg: var(--swm-pink-100);
+
+  --navbar-selected-bg: var(--swm-brand);
 }
