feat: update landing page after v0.5.0 release

--- a/landing/src/components/RoadmapSection.astro
+++ b/landing/src/components/RoadmapSection.astro
@@ -5,16 +5,17 @@ import CTA from "@/components/CTA.astro";
 import { Lightbulb } from "lucide-react";
 
 const accordionData = [
-  {
-    versionNumber: "v0.5.0",
-    bulletpoints: [
-      "Improved assigns inspection and tracking",
-      "Async loading and streams debugging",
-      "“Dead LiveViews” section showing recently crashed views",
-      "Resource usage monitoring of LiveView processes",
-      "Performance improvements",
-    ],
-  },
+  // released
+  // {
+  //   versionNumber: "v0.5.0",
+  //   bulletpoints: [
+  //     "Improved assigns inspection and tracking",
+  //     "Async loading and streams debugging",
+  //     "“Dead LiveViews” section showing recently crashed views",
+  //     "Resource usage monitoring of LiveView processes",
+  //     "Performance improvements",
+  //   ],
+  // },
   {
     versionNumber: "v0.6.0",
     bulletpoints: [
