--- a/landing/src/components/WhatsNewSection.astro
+++ b/landing/src/components/WhatsNewSection.astro
@@ -35,7 +35,7 @@ const newsBlocks = [
   >
     <div class="flex flex-col items-center justify-center gap-4">
       <Badge variant="ternary"
-        ><p class="text-sm font-medium">LiveDebugger v0.4.0</p></Badge
+        ><p class="text-sm font-medium">LiveDebugger v0.5.0</p></Badge
       >
       <h2 class="text-primary text-center text-2xl font-bold">What’s new</h2>
       <h3 class="font-regular text-lg">
@@ -46,7 +46,7 @@ const newsBlocks = [
     <div class="aspect-video h-full w-full">
       <iframe
         class="h-full w-full"
-        src="https://www.youtube.com/embed/UxCUEC4Op6A?si=8rED37pD-VJs64yW?controls=0"
+        src="https://www.youtube.com/embed/UwoAqKYY2-w?si=iV2dolcoSBEcOXlr?controls=0"
         title="YouTube video player"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin"
