--- a/landing/src/layouts/Layout.astro
+++ b/landing/src/layouts/Layout.astro
@@ -7,7 +7,6 @@ import { Footer } from "@/components/ui/Footer";
 export interface Props {
   title: string;
 }
-const { title } = Astro.props;
 ---
 
 <html lang="en">
@@ -21,8 +20,10 @@ const { title } = Astro.props;
       content="A must-have tool for Elixir developers. See your LiveComponents tree, inspect assigns, trace and filter callback executions, and more."
     />
     <Font cssVariable="--font-aeonik" preload />
-    <!-- Google Tag Manager -->
-    <script>
+    {/* Google tag - analytics */}
+    <script
+      is:inline
+      set:html={`  
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -33,19 +34,42 @@ const { title } = Astro.props;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PMLFF7CX");
-    </script>
-    <!-- End Google Tag Manager -->
+    `}
+    />
+    {/* Google tag - consent */}
+    <script
+      is:inline
+      set:html={`  
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-KWM6TSC9");
+    `}
+    />
   </head>
   <body class="font-primary">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
+    {/* Google tag - analytics */}
+    <noscript>
+      <iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-PMLFF7CX"
         height="0"
         width="0"
-        style="display:none;visibility:hidden"></iframe></noscript
-    >
-    <!-- End Google Tag Manager (noscript) -->
+        style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    {/* Google tag - consent */}
+    <noscript>
+      <iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KWM6TSC9"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe>
+    </noscript>
     <Header client:load />
     <slot />
     <Footer client:load />
