change error colors

--- a/assets/app/styles/colors.css
+++ b/assets/app/styles/colors.css
@@ -27,6 +27,8 @@
   --red-800: #991b1b;
   --red-900: #7f1d1d;
   --red-950: #450a0a;
+  --red-error-dark: #412423;
+  --red-error: #653434;
 
   /* Slate */
   --slate-50: #f8fafc;
