--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -101,4 +101,8 @@
   --status-dot-error-bg: var(--swm-pink-100);
 
   --navbar-selected-bg: var(--swm-brand);
+
+  --survey-text: var(--neutrals-white);
+  --survey-link: var(--swm-sea-blue-40);
+  --survey-link-hover: var(--swm-sea-blue-100);
 }
