feat: change gtm container id, add analytics flag

--- a/landing/src/layouts/Layout.astro
+++ b/landing/src/layouts/Layout.astro
@@ -7,7 +7,10 @@ import { Footer } from "@/components/ui/Footer";
 export interface Props {
   title: string;
 }
-const { title } = Astro.props;
+
+const enableAnalytics =
+  import.meta.env.ENABLE_ANALYTICS === true ||
+  import.meta.env.ENABLE_ANALYTICS === "true";
 ---
 
 <html lang="en">
@@ -22,25 +25,34 @@ const { title } = Astro.props;
     />
     <Font cssVariable="--font-aeonik" preload />
     <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-PMLFF7CX");
-    </script>
-    <!-- End Google Tag Manager -->
+    {
+      enableAnalytics && (
+        <>
+          {/* Google tag - analytics */}
+          <script
+            is:inline
+            set:html={`  
+              (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+                var f = d.getElementsByTagName(s)[0],
+                  j = d.createElement(s),
+                  dl = l != "dataLayer" ? "&l=" + l : "";
+                j.async = true;
+                j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+                f.parentNode.insertBefore(j, f);
+              })(window, document, "script", "dataLayer", "GTM-PHWF3VVF");
+            `}
+          />
+        </>
+      )
+    }
   </head>
   <body class="font-primary">
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-PMLFF7CX"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PHWF3VVF"
         height="0"
         width="0"
         style="display:none;visibility:hidden"></iframe></noscript
