Remove v0.6.0 from roadmap section

--- a/landing/src/components/RoadmapSection.astro
+++ b/landing/src/components/RoadmapSection.astro
@@ -16,15 +16,15 @@ const accordionData = [
   //     "Performance improvements",
   //   ],
   // },
-  {
-    versionNumber: "v0.6.0",
-    bulletpoints: [
-      "Ability to send custom messages to LiveViews / LiveComponents",
-      "Clearer error reporting for callback exceptions",
-      "Debugging of temporary assigns",
-      "Increased stability during application recompilation",
-    ],
-  },
+  // {
+  //   versionNumber: "v0.6.0",
+  //   bulletpoints: [
+  //     "Ability to send custom messages to LiveViews / LiveComponents",
+  //     "Clearer error reporting for callback exceptions",
+  //     "Debugging of temporary assigns",
+  //     "Increased stability during application recompilation",
+  //   ],
+  // },
   {
     versionNumber: "v0.7.0",
     bulletpoints: [
