Update movie url

--- a/landing/src/components/WhatsNewSection.astro
+++ b/landing/src/components/WhatsNewSection.astro
@@ -52,7 +52,7 @@ const newsBlocks = [
     <div class="aspect-video h-full w-full">
       <iframe
         class="h-full w-full"
-        src="https://www.youtube.com/embed/UwoAqKYY2-w?si=iV2dolcoSBEcOXlr?controls=0"
+        src="https://www.youtube.com/embed/G2KP0JdRmdo?si=iV2dolcoSBEcOXlr?controls=0"
         title="YouTube video player"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin"
